--- a/TODO.org
+++ b/TODO.org
@@ -7,6 +7,8 @@ CLOSED: [2022-09-29 Thu 13:54]
 CLOSED: [2022-09-29 Thu 13:54]
 ** DONE Write regfmt test framework
 CLOSED: [2022-09-29 Thu 13:55]
+** DONE Implement Deserialize input YAML to native object DB
+CLOSED: [2022-09-29 Thu 18:15]
 ** TODO Implement DRC check
 ** TODO Implement SVG Renderer
 ** TODO Define regfmt style configuration schema
